código ahora no usa ID y se añadió validación de que no pueden existir 2 códigos con el mismo código de barra